# serializer version: 1
# name: test_agent_graph_with_jump_to_end_as_after_agent
  '''
  ---
  config:
    flowchart:
      curve: linear
  ---
  graph TD;
  	__start__([<p>__start__</p>]):::first
  	model(model)
  	tools(tools)
  	NoopZero\2ebefore_agent(NoopZero.before_agent)
  	NoopOne\2eafter_agent(NoopOne.after_agent)
  	NoopTwo\2eafter_agent(NoopTwo.after_agent)
  	__end__([<p>__end__</p>]):::last
  	NoopTwo\2eafter_agent --> NoopOne\2eafter_agent;
  	NoopZero\2ebefore_agent -.-> NoopTwo\2eafter_agent;
  	NoopZero\2ebefore_agent -.-> model;
  	__start__ --> NoopZero\2ebefore_agent;
  	model -.-> NoopTwo\2eafter_agent;
  	model -.-> tools;
  	tools -.-> NoopTwo\2eafter_agent;
  	tools -.-> model;
  	NoopOne\2eafter_agent --> __end__;
  	classDef default fill:#f2f0ff,line-height:1.2
  	classDef first fill-opacity:0
  	classDef last fill:#bfb6fc
  
  '''
# ---
# name: test_create_agent_jump[memory]
  '''
  ---
  config:
    flowchart:
      curve: linear
  ---
  graph TD;
  	__start__([<p>__start__</p>]):::first
  	model(model)
  	tools(tools)
  	NoopSeven\2ebefore_model(NoopSeven.before_model)
  	NoopSeven\2eafter_model(NoopSeven.after_model)
  	NoopEight\2ebefore_model(NoopEight.before_model)
  	NoopEight\2eafter_model(NoopEight.after_model)
  	__end__([<p>__end__</p>]):::last
  	NoopEight\2eafter_model --> NoopSeven\2eafter_model;
  	NoopEight\2ebefore_model -.-> __end__;
  	NoopEight\2ebefore_model -.-> model;
  	NoopSeven\2eafter_model -.-> NoopSeven\2ebefore_model;
  	NoopSeven\2eafter_model -.-> __end__;
  	NoopSeven\2eafter_model -.-> tools;
  	NoopSeven\2ebefore_model --> NoopEight\2ebefore_model;
  	__start__ --> NoopSeven\2ebefore_model;
  	model --> NoopEight\2eafter_model;
  	tools -.-> NoopSeven\2ebefore_model;
  	tools -.-> __end__;
  	classDef default fill:#f2f0ff,line-height:1.2
  	classDef first fill-opacity:0
  	classDef last fill:#bfb6fc
  
  '''
# ---
# name: test_create_agent_jump[postgres]
  '''
  ---
  config:
    flowchart:
      curve: linear
  ---
  graph TD;
  	__start__([<p>__start__</p>]):::first
  	model(model)
  	tools(tools)
  	NoopSeven\2ebefore_model(NoopSeven.before_model)
  	NoopSeven\2eafter_model(NoopSeven.after_model)
  	NoopEight\2ebefore_model(NoopEight.before_model)
  	NoopEight\2eafter_model(NoopEight.after_model)
  	__end__([<p>__end__</p>]):::last
  	NoopEight\2eafter_model --> NoopSeven\2eafter_model;
  	NoopEight\2ebefore_model -.-> __end__;
  	NoopEight\2ebefore_model -.-> model;
  	NoopSeven\2eafter_model -.-> NoopSeven\2ebefore_model;
  	NoopSeven\2eafter_model -.-> __end__;
  	NoopSeven\2eafter_model -.-> tools;
  	NoopSeven\2ebefore_model --> NoopEight\2ebefore_model;
  	__start__ --> NoopSeven\2ebefore_model;
  	model --> NoopEight\2eafter_model;
  	tools -.-> NoopSeven\2ebefore_model;
  	tools -.-> __end__;
  	classDef default fill:#f2f0ff,line-height:1.2
  	classDef first fill-opacity:0
  	classDef last fill:#bfb6fc
  
  '''
# ---
# name: test_create_agent_jump[postgres_pipe]
  '''
  ---
  config:
    flowchart:
      curve: linear
  ---
  graph TD;
  	__start__([<p>__start__</p>]):::first
  	model(model)
  	tools(tools)
  	NoopSeven\2ebefore_model(NoopSeven.before_model)
  	NoopSeven\2eafter_model(NoopSeven.after_model)
  	NoopEight\2ebefore_model(NoopEight.before_model)
  	NoopEight\2eafter_model(NoopEight.after_model)
  	__end__([<p>__end__</p>]):::last
  	NoopEight\2eafter_model --> NoopSeven\2eafter_model;
  	NoopEight\2ebefore_model -.-> __end__;
  	NoopEight\2ebefore_model -.-> model;
  	NoopSeven\2eafter_model -.-> NoopSeven\2ebefore_model;
  	NoopSeven\2eafter_model -.-> __end__;
  	NoopSeven\2eafter_model -.-> tools;
  	NoopSeven\2ebefore_model --> NoopEight\2ebefore_model;
  	__start__ --> NoopSeven\2ebefore_model;
  	model --> NoopEight\2eafter_model;
  	tools -.-> NoopSeven\2ebefore_model;
  	tools -.-> __end__;
  	classDef default fill:#f2f0ff,line-height:1.2
  	classDef first fill-opacity:0
  	classDef last fill:#bfb6fc
  
  '''
# ---
# name: test_create_agent_jump[postgres_pool]
  '''
  ---
  config:
    flowchart:
      curve: linear
  ---
  graph TD;
  	__start__([<p>__start__</p>]):::first
  	model(model)
  	tools(tools)
  	NoopSeven\2ebefore_model(NoopSeven.before_model)
  	NoopSeven\2eafter_model(NoopSeven.after_model)
  	NoopEight\2ebefore_model(NoopEight.before_model)
  	NoopEight\2eafter_model(NoopEight.after_model)
  	__end__([<p>__end__</p>]):::last
  	NoopEight\2eafter_model --> NoopSeven\2eafter_model;
  	NoopEight\2ebefore_model -.-> __end__;
  	NoopEight\2ebefore_model -.-> model;
  	NoopSeven\2eafter_model -.-> NoopSeven\2ebefore_model;
  	NoopSeven\2eafter_model -.-> __end__;
  	NoopSeven\2eafter_model -.-> tools;
  	NoopSeven\2ebefore_model --> NoopEight\2ebefore_model;
  	__start__ --> NoopSeven\2ebefore_model;
  	model --> NoopEight\2eafter_model;
  	tools -.-> NoopSeven\2ebefore_model;
  	tools -.-> __end__;
  	classDef default fill:#f2f0ff,line-height:1.2
  	classDef first fill-opacity:0
  	classDef last fill:#bfb6fc
  
  '''
# ---
# name: test_create_agent_jump[sqlite]
  '''
  ---
  config:
    flowchart:
      curve: linear
  ---
  graph TD;
  	__start__([<p>__start__</p>]):::first
  	model(model)
  	tools(tools)
  	NoopSeven\2ebefore_model(NoopSeven.before_model)
  	NoopSeven\2eafter_model(NoopSeven.after_model)
  	NoopEight\2ebefore_model(NoopEight.before_model)
  	NoopEight\2eafter_model(NoopEight.after_model)
  	__end__([<p>__end__</p>]):::last
  	NoopEight\2eafter_model --> NoopSeven\2eafter_model;
  	NoopEight\2ebefore_model -.-> __end__;
  	NoopEight\2ebefore_model -.-> model;
  	NoopSeven\2eafter_model -.-> NoopSeven\2ebefore_model;
  	NoopSeven\2eafter_model -.-> __end__;
  	NoopSeven\2eafter_model -.-> tools;
  	NoopSeven\2ebefore_model --> NoopEight\2ebefore_model;
  	__start__ --> NoopSeven\2ebefore_model;
  	model --> NoopEight\2eafter_model;
  	tools -.-> NoopSeven\2ebefore_model;
  	tools -.-> __end__;
  	classDef default fill:#f2f0ff,line-height:1.2
  	classDef first fill-opacity:0
  	classDef last fill:#bfb6fc
  
  '''
# ---
# name: test_simple_agent_graph
  '''
  ---
  config:
    flowchart:
      curve: linear
  ---
  graph TD;
  	__start__([<p>__start__</p>]):::first
  	model(model)
  	tools(tools)
  	__end__([<p>__end__</p>]):::last
  	__start__ --> model;
  	model -.-> __end__;
  	model -.-> tools;
  	tools -.-> __end__;
  	tools -.-> model;
  	classDef default fill:#f2f0ff,line-height:1.2
  	classDef first fill-opacity:0
  	classDef last fill:#bfb6fc
  
  '''
# ---
